NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/NATT_Approval_Process__c.object-meta.xml
<CustomObject>
    <label>NATT Approval Process</label>
    <nameField>
        <displayFormat>AP-{0000}</displayFormat>
        <label>NATT Approval Process Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NATT Approval Process</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>