NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/fields/Approval_Object__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object__c</fullName>
    <label>Approval Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SBQQ__Quote__c</fullName>
                <label>Quote</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>