NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/fields/Business_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Sub_Type__c</fullName>
    <label>Business Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Units Quote</fullName>
            </value>
            <value>
                <fullName>Direct Sales</fullName>
            </value>
            <value>
                <fullName>BluEdge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>