NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NATT</fullName>
            </value>
            <value>
                <fullName>CTM</fullName>
            </value>
            <value>
                <fullName>CTBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>