NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/fields/Margin_DOS_Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Margin_DOS_Lower_Bound__c</fullName>
    <label>Margin %  DOS Lower Bound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>