NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/fields/Margin_VP_or_CFO_Lower_Bound__c.field-meta.xml
<CustomField>
    <fullName>Margin_VP_or_CFO_Lower_Bound__c</fullName>
    <label>Margin %  VP or CFO Lower Bound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>