NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/fields/NATT_Unit__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unit__c</fullName>
    <formula>TEXT(Product_Name__r.NATT_Unit__c)</formula>
    <label>NATT Unit</label>
    <type>Text</type>
</CustomField>