NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT(Product_Name__r.Family)</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>