NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>NATT Approval Process</relationshipLabel>
    <relationshipName>NATT_Approval_Process</relationshipName>
    <type>Lookup</type>
</CustomField>