NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/fields/Product_Name_Value__c.field-meta.xml
<CustomField>
    <fullName>Product_Name_Value__c</fullName>
    <formula>Product_Name__r.Name</formula>
    <label>Product Name Value</label>
    <type>Text</type>
</CustomField>