NATTQA-ENV/force-app/main/default/objects/NATT_Approval_Process__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>NATT_Unit__c</columns>
    <columns>Margin_EAM_Lower_Bound__c</columns>
    <columns>Margin_RD_Lower_Bound__c</columns>
    <columns>Margin_DOS_Lower_Bound__c</columns>
    <columns>Margin_Sales_Ops_Lower_Bound__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>